# becksie-server

./: Dockerfile  app.py  pyproject.toml
builder/: fetch_models.py  requirements.txt
src/: predict.py  requirements.txt  rp_handler.py  rp_schema.py  utils.py
