[tool.poetry]
name = "becksie-server"
version = "0.1.0"
description = ""
authors = ["Simon Palmer <palmer.simond@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.0"
locust = "^2.32.4"
faster-whisper = "^1.1.0"
runpod = "1.7.0"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
